welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:12: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (b<0) {
         ^